--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -98,17 +98,17 @@ jobs:
               run: docker load < ${{matrix.app}}-image.tar
 
             - name: Retag image for upload
-              run: docker tag ${{matrix.app}}:latest docker.saturnserver.org/rangers/${{matrix.app}}:latest
+              run: docker tag ${{matrix.app}}:latest ghcr.io/ionaru/rangers-site/${{matrix.app}}:latest
 
             - name: Login to Docker Registry
               uses: docker/login-action@v2
               with:
-                  registry: docker.saturnserver.org
-                  username: ${{ secrets.REGISTRY_USER }}
-                  password: ${{ secrets.REGISTRY_PASSWORD }}
+                  registry: ghcr.io
+                  username: ${{ github.actor }}
+                  password: ${{ secrets.GITHUB_TOKEN }}
 
             - name: Push image
-              run: docker push docker.saturnserver.org/rangers/${{matrix.app}}:latest
+              run: docker push -a ghcr.io/ionaru/rangers-site/${{matrix.app}}
 
     deploy:
         needs: [push-image]
