--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
     legacy:
         # The old monolithic version of this app.
-        image: docker.saturnserver.org/rangers/legacy:latest
+        image: ghcr.io/ionaru/rangers-site/legacy:latest
         environment:
             - DEBUG
             - RANGERS_ADMINS
